@@ -416,7 +416,9 @@ EOF
         [ X"${BACKEND}" == X'MYSQL' ] && ALL_PKGS="${ALL_PKGS} python-mysqldb"
         [ X"${BACKEND}" == X'PGSQL' ] && ALL_PKGS="${ALL_PKGS} python-psycopg2"
 
-        [ X"${DISTRO_CODENAME}" == X'xenial' ] && ALL_PKGS="${ALL_PKGS} python-pymysql"
+        if [ X"${DISTRO_CODENAME}" != X'trusty' ]; then
+            ALL_PKGS="${ALL_PKGS} python-pymysql"
+        fi
 
     elif [ X"${DISTRO}" == X'OPENBSD' ]; then
         ALL_PKGS="${ALL_PKGS} py-sqlalchemy py-dnspython"
