@@ -1,3 +1,3 @@
 e1bb87dbe590c20b8b8a273aeca9a168  misc/roundcubemail-1.2.2-complete.tar.gz
 4ddc8653c9b03d26d31ceec47d795b14  misc/iRedAPD-beta.tar.bz2
-64a64ebc240f00ecd145c7877b9baa7f  misc/iRedAdmin-0.6.3.tar.bz2
+8fec2c2bc99786306b837b28711ea712  misc/iRedAdmin-beta.tar.bz2
